CDPD-25044 Backport HIVE-24427 hplsql improvements (amagyar) This commit does not contain secrets
Change-Id: I78cd195eb70ecde448651a9f7ebfb422ef75f652