@@ -18,16 +18,23 @@
 
 package org.apache.hive.hplsql;
 
-import java.sql.ResultSet;
-import java.sql.ResultSetMetaData;
+import static java.util.stream.IntStream.range;
+
 import java.sql.SQLException;
 import java.util.ArrayList;
+import java.util.List;
 import java.util.Stack;
 import java.util.UUID;
+import java.util.stream.Collectors;
 
 import org.antlr.v4.runtime.ParserRuleContext;
 import org.antlr.v4.runtime.Token;
 import org.apache.hive.hplsql.Var.Type;
+import org.apache.hive.hplsql.executor.Metadata;
+import org.apache.hive.hplsql.executor.QueryException;
+import org.apache.hive.hplsql.executor.QueryExecutor;
+import org.apache.hive.hplsql.executor.QueryResult;
+import org.apache.hive.hplsql.objects.Table;
 
 /**
  * HPL/SQL statements execution
@@ -38,15 +45,19 @@ public class Stmt {
   Stack<Var> stack = null;
   Conf conf;
   Meta meta;
+  Console console;
   
-  boolean trace = false; 
-  
-  Stmt(Exec e) {
+  boolean trace = false;
+  private QueryExecutor queryExecutor;
+
+  Stmt(Exec e, QueryExecutor queryExecutor) {
     exec = e;  
     stack = exec.getStack();
     conf = exec.getConf();
     meta = exec.getMeta();
     trace = exec.getTrace();
+    console = exec.console;
+    this.queryExecutor = queryExecutor;;
   }
   
   /**
@@ -58,8 +69,7 @@ public class Stmt {
     Var cur = null;
     if (ctx.T_PROCEDURE() != null) {
       cur = exec.consumeReturnCursor(ctx.ident(1).getText());
-    }
-    else if (ctx.T_RESULT() != null) {
+    } else if (ctx.T_RESULT() != null) {
       cur = exec.findVariable(ctx.ident(1).getText());
       if (cur != null && cur.type != Type.RS_LOCATOR) {
         cur = null;
@@ -87,7 +97,7 @@ public class Stmt {
     for (int i = 0; i < cnt - 1; i++) {
       Var cur = exec.consumeReturnCursor(procedure);
       if (cur != null) {
-        String name = ctx.ident(i).getText(); 
+        String name = ctx.ident(i).getText();
         Var loc = exec.findVariable(name);
         if (loc == null) {
           loc = new Var(name, Type.RS_LOCATOR, cur.value);
@@ -109,17 +119,17 @@ public class Stmt {
     if (trace) {
       trace(ctx, "DECLARE CURSOR " + name);
     }
-    Query query = new Query();
+    Cursor cursor = new Cursor(null);
     if (ctx.expr() != null) {
-      query.setExprCtx(ctx.expr());
+      cursor.setExprCtx(ctx.expr());
     }
     else if (ctx.select_stmt() != null) {
-      query.setSelectCtx(ctx.select_stmt());
+      cursor.setSelectCtx(ctx.select_stmt());
     }
     if (ctx.cursor_with_return() != null) {
-      query.setWithReturn(true);
+      cursor.setWithReturn(true);
     }
-    Var var = new Var(name, Type.CURSOR, query);
+    Var var = new Var(name, Type.CURSOR, cursor);
     exec.addVariable(var);
     return 0; 
   }
@@ -142,13 +152,13 @@ public class Stmt {
     }
     sql.append(createTableDefinition(ctx.create_table_definition(), last));
     trace(ctx, sql.toString());
-    Query query = exec.executeSql(ctx, sql.toString(), exec.conf.defaultConnection);
+    QueryResult query = queryExecutor.executeQuery(sql.toString(), ctx);
     if (query.error()) {
       exec.signal(query);
       return 1;
     }
     exec.setSqlSuccess();
-    exec.closeQuery(query, exec.conf.defaultConnection);
+    query.close();
     return 0; 
   }  
 
@@ -171,6 +181,9 @@ public class Stmt {
         last = col.getStop();
       }
       exec.append(sql, ctx.T_CLOSE_P().getText(), last, ctx.T_CLOSE_P().getSymbol());
+    }
+    else if (ctx.T_LIKE() != null) {
+      sql.append(" ").append(ctx.T_LIKE().getText()).append(" ").append(evalPop(ctx.table_name()));
     }
     // CREATE TABLE AS SELECT statement
     else {
@@ -234,7 +247,7 @@ public class Stmt {
    */
   public Integer declareTemporaryTable(HplsqlParser.Declare_temporary_table_itemContext ctx) { 
     trace(ctx, "DECLARE TEMPORARY TABLE");
-    return createTemporaryTable(ctx.ident(), ctx.create_table_definition(), ctx.create_table_preoptions());
+    return createTemporaryTable(ctx.qident(), ctx.create_table_definition(), ctx.create_table_preoptions());
   }
   
   /**
@@ -252,8 +265,11 @@ public class Stmt {
     }
     if (ctx.T_IF() != null) {
       sql.append(exec.getText(ctx, ctx.T_IF().getSymbol(), ctx.T_EXISTS().getSymbol()) + " "); 
-    }    
+    }
+    boolean oldBuildSql = exec.buildSql;
+    exec.buildSql = true;
     sql.append(evalPop(ctx.expr()).toString());
+    exec.buildSql = oldBuildSql;
     int cnt = ctx.create_database_option().size();
     for (int i = 0; i < cnt; i++) {
       HplsqlParser.Create_database_optionContext option = ctx.create_database_option(i);
@@ -265,13 +281,13 @@ public class Stmt {
       }
     }
     trace(ctx, sql.toString());
-    Query query = exec.executeSql(ctx, sql.toString(), exec.conf.defaultConnection);
+    QueryResult query = queryExecutor.executeQuery(sql.toString(), ctx);
     if (query.error()) {
       exec.signal(query);
       return 1;
     }
     exec.setSqlSuccess();
-    exec.closeQuery(query, exec.conf.defaultConnection);
+    query.close();
     return 0;
   }
   
@@ -280,13 +296,13 @@ public class Stmt {
    */
   public Integer createLocalTemporaryTable(HplsqlParser.Create_local_temp_table_stmtContext ctx) { 
     trace(ctx, "CREATE LOCAL TEMPORARY TABLE");
-    return createTemporaryTable(ctx.ident(), ctx.create_table_definition(), ctx.create_table_preoptions());
+    return createTemporaryTable(ctx.qident(), ctx.create_table_definition(), ctx.create_table_preoptions());
    }
   
   /**
    * Create a temporary table statement 
    */
-  public Integer createTemporaryTable(HplsqlParser.IdentContext identCtx, HplsqlParser.Create_table_definitionContext defCtx,
+  public Integer createTemporaryTable(HplsqlParser.QidentContext identCtx, HplsqlParser.Create_table_definitionContext defCtx,
                                       HplsqlParser.Create_table_preoptionsContext optCtx) { 
     StringBuilder sql = new StringBuilder();
     String name = identCtx.getText();
@@ -317,7 +333,7 @@ public class Stmt {
       trace(null, sql.toString()); 
     }
     if (sql != null) {
-      Query query = exec.executeSql(null, sql.toString(), exec.conf.defaultConnection);
+      QueryResult query = queryExecutor.executeQuery(sql.toString(), null);
       if (query.error()) {
         exec.signal(query);
         return 1;
@@ -326,7 +342,7 @@ public class Stmt {
         exec.addManagedTable(name, managedName);
       }
       exec.setSqlSuccess();
-      exec.closeQuery(query, exec.conf.defaultConnection);
+      query.close();
     }    
     return 0; 
   }
@@ -338,35 +354,28 @@ public class Stmt {
     trace(ctx, "DESCRIBE");
     String sql = "DESCRIBE " + evalPop(ctx.table_name()).toString();   
     trace(ctx, sql);
-    Query query = exec.executeSql(ctx, sql, exec.conf.defaultConnection);
+    QueryResult query = queryExecutor.executeQuery(sql, ctx);
     if (query.error()) {
       exec.signal(query);
       return 1;
     }
     try {
-      ResultSet rs = query.getResultSet();
-      ResultSetMetaData rm = null;
-      if (rs != null) {
-        rm = rs.getMetaData();
-        int cols = rm.getColumnCount();
-        while (rs.next()) {
-          for (int i = 1; i <= cols; i++) {
-            if (i > 1) {
-              System.out.print("\t");
-            }
-            System.out.print(rs.getString(i));
+      while (query.next()) {
+        for (int i = 0; i < query.columnCount(); i++) {
+          if (i > 0) {
+            console.print("\t");
           }
-          System.out.println("");
+          console.print(query.column(i, String.class));
         }
+        console.printLine("");
       }
-    }    
-    catch (SQLException e) {
+    } catch (QueryException e) {
       exec.signal(query);
-      exec.closeQuery(query, exec.conf.defaultConnection);
+      query.close();
       return 1;
     }
     exec.setSqlSuccess();
-    exec.closeQuery(query, exec.conf.defaultConnection);
+    query.close();
     return 0;
   }
   
@@ -382,8 +391,11 @@ public class Stmt {
         sql += "IF EXISTS ";
       }
       sql += evalPop(ctx.table_name()).toString();
-    }
-    else if (ctx.T_DATABASE() != null || ctx.T_SCHEMA() != null) {
+    } else if (ctx.T_PACKAGE() != null) {
+      exec.dropPackage(ctx, ctx.ident().getText().toUpperCase(), ctx.T_EXISTS() != null);
+    } else if (ctx.T_PROCEDURE() != null || ctx.T_FUNCTION() != null) {
+      exec.dropProcedure(ctx, ctx.ident().getText().toUpperCase(), ctx.T_EXISTS() != null);
+    } else if (ctx.T_DATABASE() != null || ctx.T_SCHEMA() != null) {
       sql = "DROP DATABASE ";
       if (ctx.T_EXISTS() != null) {
         sql += "IF EXISTS ";
@@ -392,13 +404,13 @@ public class Stmt {
     }
     if (sql != null) {
       trace(ctx, sql);
-      Query query = exec.executeSql(ctx, sql, exec.conf.defaultConnection);
+      QueryResult query = queryExecutor.executeQuery(sql, ctx);
       if (query.error()) {
         exec.signal(query);
         return 1;
       }
       exec.setSqlSuccess();
-      exec.closeQuery(query, exec.conf.defaultConnection);
+      query.close();
     }
     return 0; 
   }
@@ -410,13 +422,13 @@ public class Stmt {
     trace(ctx, "TRUNCATE");
     String sql = "TRUNCATE TABLE " + evalPop(ctx.table_name()).toString();    
     trace(ctx, sql);
-    Query query = exec.executeSql(ctx, sql, exec.conf.defaultConnection);
+    QueryResult query = queryExecutor.executeQuery(sql, ctx);
     if (query.error()) {
       exec.signal(query);
       return 1;
     }
     exec.setSqlSuccess();
-    exec.closeQuery(query, exec.conf.defaultConnection);
+    query.close();
     return 0; 
   }
   
@@ -425,60 +437,51 @@ public class Stmt {
    */
   public Integer open(HplsqlParser.Open_stmtContext ctx) { 
     trace(ctx, "OPEN");
-    Query query = null;
+    Cursor cursor = null;
     Var var = null;
-    String cursor = ctx.L_ID().toString();   
+    String cursorName = ctx.ident().getText();
     String sql = null;
     if (ctx.T_FOR() != null) {                             // SELECT statement or dynamic SQL
-      if (ctx.expr() != null) {
-        sql = evalPop(ctx.expr()).toString();
-      }
-      else {
-        sql = evalPop(ctx.select_stmt()).toString();
-      }
-      query = new Query(sql);
-      var = exec.findCursor(cursor);                      // Can be a ref cursor variable
+      sql = ctx.expr() != null ? evalPop(ctx.expr()).toString() : evalPop(ctx.select_stmt()).toString();
+      cursor = new Cursor(sql);
+      var = exec.findCursor(cursorName);                      // Can be a ref cursor variable
       if (var == null) {
-        var = new Var(cursor, Type.CURSOR, query);
+        var = new Var(cursorName, Type.CURSOR, cursor);
         exec.addVariable(var);
+      } else {
+        var.setValue(cursor);
       }
-      else {
-        var.setValue(query);
-      }
-    }
-    else {                                                 // Declared cursor
-      var = exec.findVariable(cursor);      
+    } else {                                                 // Declared cursor
+      var = exec.findVariable(cursorName);
       if (var != null && var.type == Type.CURSOR) {
-        query = (Query)var.value;
-        if (query.sqlExpr != null) {
-          sql = evalPop(query.sqlExpr).toString();
-          query.setSql(sql);
-        }
-        else if (query.sqlSelect != null) {
-          sql = evalPop(query.sqlSelect).toString();
-          query.setSql(sql);
+        cursor = (Cursor) var.value;
+        if (cursor.getSqlExpr() != null) {
+          sql = evalPop(cursor.getSqlExpr()).toString();
+          cursor.setSql(sql);
+        } else if (cursor.getSqlSelect() != null) {
+          sql = evalPop(cursor.getSqlSelect()).toString();
+          cursor.setSql(sql);
         }
       }
     }
-    if (query != null) {
+    if (cursor != null) {
       if (trace) {
-        trace(ctx, cursor + ": " + sql);
+        trace(ctx, cursorName + ": " + sql);
       } 
-      exec.executeQuery(ctx, query, exec.conf.defaultConnection);
-      if (query.error()) {
-        exec.signal(query);
+      cursor.open(queryExecutor, ctx);
+      QueryResult queryResult = cursor.getQueryResult();
+      if (queryResult.error()) {
+        exec.signal(queryResult);
         return 1;
+      } else if (!exec.getOffline()) {
+        exec.setSqlCode(SqlCodes.SUCCESS);
       }
-      else if (!exec.getOffline()) {
-        exec.setSqlCode(0);
-      }
-      if (query.getWithReturn()) {
+      if (cursor.isWithReturn()) {
         exec.addReturnCursor(var);
       }
-    }
-    else {
-      trace(ctx, "Cursor not found: " + cursor);
-      exec.setSqlCode(-1);
+    } else {
+      trace(ctx, "Cursor not found: " + cursorName);
+      exec.setSqlCode(SqlCodes.ERROR);
       exec.signal(Signal.Type.SQLEXCEPTION);
       return 1;
     }
@@ -490,73 +493,84 @@ public class Stmt {
    */
   public Integer fetch(HplsqlParser.Fetch_stmtContext ctx) { 
     trace(ctx, "FETCH");
-    String name = ctx.L_ID(0).toString();
-    Var cursor = exec.findCursor(name);
-    if (cursor == null) {
+    String name = ctx.ident(0).getText();
+    Var varCursor = exec.findCursor(name);
+    if (varCursor == null) {
       trace(ctx, "Cursor not found: " + name);
-      exec.setSqlCode(-1);
+      exec.setSqlCode(SqlCodes.ERROR);
       exec.signal(Signal.Type.SQLEXCEPTION);
       return 1;
-    }  
-    else if (cursor.value == null) {
+    } else if (varCursor.value == null) {
       trace(ctx, "Cursor not open: " + name);
-      exec.setSqlCode(-1);
+      exec.setSqlCode(SqlCodes.ERROR);
       exec.signal(Signal.Type.SQLEXCEPTION);
       return 1;
-    }  
-    else if (exec.getOffline()) {
-      exec.setSqlCode(100);
+    } else if (exec.getOffline()) {
+      exec.setSqlCode(SqlCodes.NO_DATA_FOUND);
       exec.signal(Signal.Type.NOTFOUND);
       return 0;
     }
     // Assign values from the row to local variables
     try {
-      Query query = (Query)cursor.value;
-      ResultSet rs = query.getResultSet();
-      ResultSetMetaData rsm = null;
-      if(rs != null) {
-        rsm = rs.getMetaData();
-      }
-      if(rs != null && rsm != null) {
-        int cols = ctx.L_ID().size() - 1;
-        if(rs.next()) {
-          query.setFetch(true);
-          for(int i=1; i <= cols; i++) {
-            Var var = exec.findVariable(ctx.L_ID(i).getText());
+      Cursor cursor = (Cursor) varCursor.value;
+      int cols = ctx.ident().size() - 1;
+      QueryResult queryResult = cursor.getQueryResult();
+
+      if (ctx.bulk_collect_clause() != null) {
+        long limit = ctx.fetch_limit() != null ? evalPop(ctx.fetch_limit().expr()).longValue() : -1;
+        long rowIndex = 1;
+        List<Table> tables = exec.intoTables(ctx, intoVariableNames(ctx, cols));
+        tables.forEach(Table::removeAll);
+        while (queryResult.next()) {
+          cursor.setFetch(true);
+          for (int i = 0; i < cols; i++) {
+            Table table = tables.get(i);
+            table.populate(queryResult, rowIndex, i);
+          }
+          rowIndex++;
+          if (limit != -1 && rowIndex -1 >= limit) {
+            break;
+          }
+        }
+      } else {
+        if(queryResult.next()) {
+          cursor.setFetch(true);
+          for(int i=0; i < cols; i++) {
+            Var var = exec.findVariable(ctx.ident(i + 1).getText());
             if(var != null) {
               if (var.type != Var.Type.ROW) {
-                var.setValue(rs, rsm, i);
-              }
-              else {
-                var.setValues(rs, rsm);
+                var.setValue(queryResult, i);
+              } else {
+                var.setRowValues(queryResult);
               }
               if (trace) {
-                trace(ctx, var, rs, rsm, i);
+                trace(ctx, var, queryResult.metadata(), i);
               }
-            } 
-            else if(trace) {
-              trace(ctx, "Variable not found: " + ctx.L_ID(i).getText());
+            } else if(trace) {
+              trace(ctx, "Variable not found: " + ctx.ident(i + 1).getText());
             }
           }
           exec.incRowCount();
           exec.setSqlSuccess();
-        }
-        else {
-          query.setFetch(false);
-          exec.setSqlCode(100);
+        } else {
+          cursor.setFetch(false);
+          exec.setSqlCode(SqlCodes.NO_DATA_FOUND);
         }
       }
-      else {
-        exec.setSqlCode(-1);
-      }
-    } 
-    catch (SQLException e) {
+    } catch (QueryException e) {
       exec.setSqlCode(e);
       exec.signal(Signal.Type.SQLEXCEPTION, e.getMessage(), e);
     } 
     return 0; 
-  }  
-  
+  }
+
+  private List<String> intoVariableNames(HplsqlParser.Fetch_stmtContext ctx, int count) {
+    return range(0, count)
+            .mapToObj(i -> ctx.ident(i + 1).getText())
+            .collect(Collectors.toList());
+  }
+
+
   /**
    * CLOSE cursor statement
    */
@@ -565,10 +579,9 @@ public class Stmt {
     String name = ctx.L_ID().toString();
     Var var = exec.findVariable(name);
     if(var != null && var.type == Type.CURSOR) {
-      exec.closeQuery((Query)var.value, exec.conf.defaultConnection);
-      exec.setSqlCode(0);
-    }
-    else if(trace) {
+      ((Cursor)var.value).close();
+      exec.setSqlCode(SqlCodes.SUCCESS);
+    } else if(trace) {
       trace(ctx, "Cursor not found: " + name);
     }
     return 0; 
@@ -655,50 +668,41 @@ public class Stmt {
   public Integer assignFromSelect(HplsqlParser.Assignment_stmt_select_itemContext ctx) { 
     String sql = evalPop(ctx.select_stmt()).toString();
     if (trace) {
-      trace(ctx, sql.toString());
+      trace(ctx, sql);
     }
-    String conn = exec.getStatementConnection();
-    Query query = exec.executeQuery(ctx, sql.toString(), conn);
+    QueryResult query = queryExecutor.executeQuery(sql, ctx);
     if (query.error()) { 
       exec.signal(query);
       return 1;
     }
     exec.setSqlSuccess();
     try {
-      ResultSet rs = query.getResultSet();
-      ResultSetMetaData rm = null;
-      if (rs != null) {
-        rm = rs.getMetaData();
-        int cnt = ctx.ident().size();
-        if (rs.next()) {
-          for (int i = 1; i <= cnt; i++) {
-            Var var = exec.findVariable(ctx.ident(i-1).getText());
-            if (var != null) {
-              var.setValue(rs, rm, i);
-              if (trace) {
-                trace(ctx, "COLUMN: " + rm.getColumnName(i) + ", " + rm.getColumnTypeName(i));
-                trace(ctx, "SET " + var.getName() + " = " + var.toString());
-              }             
-            } 
-            else if(trace) {
-              trace(ctx, "Variable not found: " + ctx.ident(i-1).getText());
+      int cnt = ctx.ident().size();
+      if (query.next()) {
+        for (int i = 0; i < cnt; i++) {
+          Var var = exec.findVariable(ctx.ident(i).getText());
+          if (var != null) {
+            var.setValue(query, i);
+            if (trace) {
+              trace(ctx, "COLUMN: " + query.metadata().columnName(i) + ", " + query.metadata().columnTypeName(i));
+              trace(ctx, "SET " + var.getName() + " = " + var.toString());
             }
           }
-          exec.incRowCount();
-          exec.setSqlSuccess();
+          else if(trace) {
+            trace(ctx, "Variable not found: " + ctx.ident(i).getText());
+          }
         }
-        else {
-          exec.setSqlCode(100);
-          exec.signal(Signal.Type.NOTFOUND);
-        }
+        exec.incRowCount();
+        exec.setSqlSuccess();
+      } else {
+        exec.setSqlCode(SqlCodes.NO_DATA_FOUND);
+        exec.signal(Signal.Type.NOTFOUND);
       }
-    }
-    catch (SQLException e) {
+    } catch (QueryException e) {
       exec.signal(query);
       return 1;
-    }
-    finally {
-      exec.closeQuery(query, conn);
+    } finally {
+      query.close();
     }
     return 0; 
   }
@@ -733,13 +737,13 @@ public class Stmt {
     sql.append(evalPop(ctx.table_name()).toString() + " ");
     sql.append(evalPop(ctx.select_stmt()).toString());
     trace(ctx, sql.toString());
-    Query query = exec.executeSql(ctx, sql.toString(), exec.conf.defaultConnection);
+    QueryResult query = queryExecutor.executeQuery(sql.toString(), ctx);
     if (query.error()) {
       exec.signal(query);
       return 1;
     }
     exec.setSqlSuccess();
-    exec.closeQuery(query, exec.conf.defaultConnection);
+    query.close();
     return 0; 
   }
   
@@ -798,13 +802,14 @@ public class Stmt {
     if (trace) {
       trace(ctx, sql.toString());
     }
-    Query query = exec.executeSql(ctx, sql.toString(), conn);
+
+    QueryResult query = queryExecutor.executeQuery(sql.toString(), ctx);
     if (query.error()) {
       exec.signal(query);
       return 1;
     }
     exec.setSqlSuccess();
-    exec.closeQuery(query, conn);
+    query.close();
     return 0; 
   }
   
@@ -820,15 +825,14 @@ public class Stmt {
     }
     sql.append(ctx.T_DIRECTORY().getText() + " " + evalPop(ctx.expr_file()).toSqlString() + " ");
     sql.append(evalPop(ctx.expr_select()).toString());
-    String conn = exec.getStatementConnection();
     trace(ctx, sql.toString());
-    Query query = exec.executeSql(ctx, sql.toString(), conn);
+    QueryResult query = queryExecutor.executeQuery(sql.toString(), ctx);
     if (query.error()) {
       exec.signal(query);
       return 1;
     }
     exec.setSqlSuccess();
-    exec.closeQuery(query, conn);
+    query.close();
     return 0; 
   }
   
@@ -842,7 +846,7 @@ public class Stmt {
       signal = exec.currentSignal;
     }
     if (signal != null) {
-      exec.setVariable(ctx.ident().getText(), signal.getValue());
+      exec.setVariable(ctx.qident().getText(), signal.getValue());
     }
     return 0; 
   }
@@ -852,7 +856,7 @@ public class Stmt {
    */
   public Integer getDiagnosticsRowCount(HplsqlParser.Get_diag_stmt_rowcount_itemContext ctx) {
     trace(ctx, "GET DIAGNOSTICS ROW_COUNT");
-    exec.setVariable(ctx.ident().getText(), exec.getRowCount());
+    exec.setVariable(ctx.qident().getText(), exec.getRowCount());
     return 0;  
   }
   
@@ -861,20 +865,20 @@ public class Stmt {
    */
   public Integer use(HplsqlParser.Use_stmtContext ctx) {
     trace(ctx, "USE");
-    return use(ctx, ctx.T_USE().toString() + " " + meta.normalizeIdentifierPart(evalPop(ctx.expr()).toString()));
+    return use(ctx, ctx.T_USE().toString() + " " + meta.normalizeIdentifierPart(ctx.expr().getText()));
   }
   
   public Integer use(ParserRuleContext ctx, String sql) {
     if(trace) {
       trace(ctx, "SQL statement: " + sql);
     }    
-    Query query = exec.executeSql(ctx, sql, exec.conf.defaultConnection);
+    QueryResult query = queryExecutor.executeQuery(sql, ctx);
     if(query.error()) {
       exec.signal(query);
       return 1;
     }
-    exec.setSqlCode(0);
-    exec.closeQuery(query, exec.conf.defaultConnection);
+    exec.setSqlCode(SqlCodes.SUCCESS);
+    query.close();
     return 0; 
   }
   
@@ -884,9 +888,9 @@ public class Stmt {
   public Integer values(HplsqlParser.Values_into_stmtContext ctx) { 
     trace(ctx, "VALUES statement");    
     int cnt = ctx.ident().size();        // Number of variables and assignment expressions
-    int ecnt = ctx.expr().size();    
+    int ecnt = ctx.expr().size();
     for (int i = 0; i < cnt; i++) {
-      String name = ctx.ident(i).getText();      
+      String name = ctx.ident(i).getText();
       if (i < ecnt) {
         visit(ctx.expr(i));
         Var var = exec.setVariable(name);        
@@ -928,7 +932,7 @@ public class Stmt {
     String cursor = ctx.L_ID().getText();
     String sql = evalPop(ctx.select_stmt()).toString();   
     trace(ctx, sql);
-    Query query = exec.executeQuery(ctx, sql, exec.conf.defaultConnection);
+    QueryResult query = exec.queryExecutor.executeQuery(sql, ctx);
     if (query.error()) { 
       exec.signal(query);
       return 1;
@@ -936,33 +940,28 @@ public class Stmt {
     trace(ctx, "SELECT completed successfully");
     exec.setSqlSuccess();
     try {
-      ResultSet rs = query.getResultSet();
-      if (rs != null) {
-        ResultSetMetaData rm = rs.getMetaData();
-        int cols = rm.getColumnCount();
-        Row row = new Row();
-        for (int i = 1; i <= cols; i++) {
-          row.addColumn(rm.getColumnName(i), rm.getColumnTypeName(i));
-        }
-        Var var = new Var(cursor, row);
-        exec.addVariable(var);
-        while (rs.next()) {
-          var.setValues(rs, rm);
-          if (trace) {
-            trace(ctx, var, rs, rm, 0);
-          }
-          visit(ctx.block());
-          exec.incRowCount();
-        }
+      int cols = query.columnCount();
+      Row row = new Row();
+      for (int i = 0; i < cols; i++) {
+        row.addColumnDefinition(query.metadata().columnName(i), query.metadata().columnTypeName(i));
       }
-    }
-    catch (SQLException e) {
+      Var var = new Var(cursor, row);
+      exec.addVariable(var);
+      while (query.next()) {
+        var.setRowValues(query);
+        if (trace) {
+          trace(ctx, var, query.metadata(), 0);
+        }
+        visit(ctx.block());
+        exec.incRowCount();
+      }
+    } catch (QueryException e) {
       exec.signal(e);
-      exec.closeQuery(query, exec.conf.defaultConnection);
+      query.close();
       return 1;
     }
     exec.setSqlSuccess();
-    exec.closeQuery(query, exec.conf.defaultConnection);
+    query.close();
     exec.leaveScope();
     trace(ctx, "FOR CURSOR - LEFT");
     return 0; 
@@ -988,15 +987,30 @@ public class Stmt {
     return 0; 
   }
 
+  public Integer unconditionalLoop(HplsqlParser.Unconditional_loop_stmtContext ctx) {
+    trace(ctx, "UNCONDITIONAL LOOP - ENTERED");
+    String label = exec.labelPop();
+    while (true) {
+      exec.enterScope(Scope.Type.LOOP);
+      visit(ctx.block());
+      exec.leaveScope();
+      if (!canContinue(label)) {
+        break;
+      }
+    }
+    trace(ctx, "UNCONDITIONAL LOOP - LEFT");
+    return 0;
+  }
+
   /**
    * To set the Value index for FOR Statement
    */
   private Var setIndex(int start, int end, HplsqlParser.For_range_stmtContext ctx) {
 
     if (ctx.T_REVERSE() == null)
-      return new Var(ctx.L_ID().getText(), new Long(start));
+      return new Var(ctx.L_ID().getText(), Long.valueOf(start));
     else
-      return new Var(ctx.L_ID().getText(), new Long(end));
+      return new Var(ctx.L_ID().getText(), Long.valueOf(end));
   }
 
   /**
@@ -1005,9 +1019,9 @@ public class Stmt {
   private void updateIndex(int step, Var index, HplsqlParser.For_range_stmtContext ctx) {
 
     if (ctx.T_REVERSE() == null)
-      index.increment(new Long(step));
+      index.increment(step);
     else
-      index.decrement(new Long(step));
+      index.decrement(step);
   }
 
   /**
@@ -1023,57 +1037,54 @@ public class Stmt {
     if (trace) {
       trace(ctx, "SQL statement: " + sql);
     }
-    Query query = exec.executeSql(ctx, sql, exec.conf.defaultConnection);
+    QueryResult query = queryExecutor.executeQuery(sql, ctx);
     if (query.error()) {
       exec.signal(query);
       return 1;
     }
-    ResultSet rs = query.getResultSet();
-    if (rs != null) {
-      try {
-        ResultSetMetaData rm = rs.getMetaData();
-        if (ctx.T_INTO() != null) {
-          int cols = ctx.L_ID().size();
-          if (rs.next()) {
-            for (int i = 0; i < cols; i++) {
-              Var var = exec.findVariable(ctx.L_ID(i).getText());
-              if (var != null) {
-                if (var.type != Var.Type.ROW) {
-                  var.setValue(rs, rm, i + 1);
-                }
-                else {
-                  var.setValues(rs, rm);
-                }
-                if (trace) {
-                  trace(ctx, var, rs, rm, i + 1);
-                }
-              } 
-              else if (trace) {
-                trace(ctx, "Variable not found: " + ctx.L_ID(i).getText());
+    try {
+      if (ctx.T_INTO() != null) {
+        int cols = ctx.L_ID().size();
+        if (query.next()) {
+          for (int i = 0; i < cols; i++) {
+            Var var = exec.findVariable(ctx.L_ID(i).getText());
+            if (var != null) {
+              if (var.type != Type.ROW) {
+                var.setValue(query, i);
+              }
+              else {
+                var.setRowValues(query);
+              }
+              if (trace) {
+                trace(ctx, var, query.metadata(), i);
               }
             }
-            exec.setSqlCode(0);
-          }
-        }
-        // Print the results
-        else {
-          int cols = rm.getColumnCount();
-          while(rs.next()) {
-            for(int i = 1; i <= cols; i++) {
-              if(i > 1) {
-                System.out.print("\t");
-              }
-              System.out.print(rs.getString(i));
+            else if (trace) {
+              trace(ctx, "Variable not found: " + ctx.L_ID(i).getText());
             }
-            System.out.println("");
           }
+          exec.setSqlCode(SqlCodes.SUCCESS);
         }
-      } 
-      catch(SQLException e) {
-        exec.setSqlCode(e);
-      } 
-    }   
-    exec.closeQuery(query, exec.conf.defaultConnection);
+      }
+      // Print the results
+      else {
+        int cols = query.columnCount();
+        while(query.next()) {
+          for(int i = 0; i < cols; i++) {
+            if(i > 1) {
+              console.print("\t");
+            }
+            console.print(query.column(i, String.class));
+          }
+          console.printLine("");
+        }
+      }
+    } catch(QueryException e) {
+      exec.signal(query);
+      query.close();
+      return 1;
+    }
+    query.close();
     return 0; 
   }
   
@@ -1081,11 +1092,9 @@ public class Stmt {
    * EXEC to execute a stored procedure
    */
   public Boolean execProc(HplsqlParser.Exec_stmtContext ctx) { 
-    String name = evalPop(ctx.expr()).toString();
-    if (exec.function.isProc(name)) {
-      if (exec.function.execProc(name, ctx.expr_func_params(), ctx)) {
-        return true;
-      }
+    String name = evalPop(ctx.expr()).toString().toUpperCase();
+    if (exec.functions.exec(name, ctx.expr_func_params())) {
+      return true;
     }
     return false;
   }
@@ -1145,13 +1154,13 @@ public class Stmt {
     trace(ctx, "UPDATE");
     String sql = exec.getFormattedText(ctx);
     trace(ctx, sql);
-    Query query = exec.executeSql(ctx, sql, exec.conf.defaultConnection);
+    QueryResult query = queryExecutor.executeQuery(sql, ctx);
     if (query.error()) {
       exec.signal(query);
       return 1;
     }
     exec.setSqlSuccess();
-    exec.closeQuery(query, exec.conf.defaultConnection);
+    query.close();
     return 0;
   }
   
@@ -1175,13 +1184,13 @@ public class Stmt {
       sql.append("TRUNCATE TABLE " + table);
     }
     trace(ctx, sql.toString());
-    Query query = exec.executeSql(ctx, sql.toString(), exec.conf.defaultConnection);
+    QueryResult query = queryExecutor.executeQuery(sql.toString(), ctx);
     if (query.error()) {
       exec.signal(query);
       return 1;
     }
     exec.setSqlSuccess();
-    exec.closeQuery(query, exec.conf.defaultConnection);
+    query.close();
     return 0;
   }
   
@@ -1192,13 +1201,13 @@ public class Stmt {
     trace(ctx, "MERGE");
     String sql = exec.getFormattedText(ctx);
     trace(ctx, sql);
-    Query query = exec.executeSql(ctx, sql, exec.conf.defaultConnection);
+    QueryResult query = queryExecutor.executeQuery(sql, ctx);
     if (query.error()) {
       exec.signal(query);
       return 1;
     }
     exec.setSqlSuccess();
-    exec.closeQuery(query, exec.conf.defaultConnection);
+    query.close();
     return 0;
   }
   
@@ -1208,7 +1217,7 @@ public class Stmt {
   public Integer print(HplsqlParser.Print_stmtContext ctx) { 
     trace(ctx, "PRINT");
     if (ctx.expr() != null) {
-      System.out.println(evalPop(ctx.expr()).toString());
+      console.printLine(evalPop(ctx.expr()).toString());
     }
 	  return 0; 
   }
@@ -1241,7 +1250,7 @@ public class Stmt {
     trace(ctx, "SIGNAL");
     Signal signal = new Signal(Signal.Type.USERDEFINED, ctx.ident().getText());
     exec.signal(signal);
-    return 0; 
+    return 0;
   }  
 
   /**
@@ -1319,61 +1328,44 @@ public class Stmt {
     else {
       sql.append(" FROM (" + select + ") t");
     }
-    Query query = exec.executeQuery(ctx, sql.toString(), conn);
+    QueryResult query = queryExecutor.executeQuery(sql.toString(), ctx);
     if (query.error()) { 
       exec.signal(query);
       return 1;
     }    
     exec.setSqlSuccess();
     try {
-      ResultSet rs = query.getResultSet();
-      if (rs != null) {
-        System.out.print("\n");
-        // The summary query returns only one row        
-        if (rs.next()) {
-          int i = 0, cc = 11;
-          String cntRows = rs.getString(1);
-          // Pad output
-          String fmt = String.format("%%-%ds\t%%-11s\t%%-11s\t%%-11s\t%%-11s\t%%-11s\t%%-11s\t%%-11s\t%%-11s" +
-              "\t%%-11s\t%%-11s\t%%-11s\t%%-11s\t%%-11s\n", maxColName + 1);
-          System.out.print(String.format(fmt, "Column", "Type", "Rows", "NonNull", "Unique", "Avg", 
-              "Min", "Max", "StdDev", "p05", "p25", "p50", "p75", "p95"));          
-          for(Column c : row.getColumns()) {
-            String avg = String.format("%.2f", rs.getDouble(4 + i*cc));
-            if (rs.wasNull())
-              avg = "null";
-            String stddev = String.format("%.2f", rs.getDouble(7 + i*cc));
-            if (rs.wasNull())
-              stddev = "null";
-            String p05 = String.format("%.2f", rs.getDouble(8 + i*cc));
-            if (rs.wasNull())
-              p05 = "null";
-            String p25 = String.format("%.2f", rs.getDouble(9 + i*cc));
-            if (rs.wasNull())
-              p25 = "null";
-            String p50 = String.format("%.2f", rs.getDouble(10 + i*cc));
-            if (rs.wasNull())
-              p50 = "null";
-            String p75 = String.format("%.2f", rs.getDouble(11 + i*cc));
-            if (rs.wasNull())
-              p75 = "null";
-            String p95 = String.format("%.2f", rs.getDouble(12 + i*cc));
-            if (rs.wasNull())
-              p95 = "null";
-            System.out.print(String.format(fmt, c.getName(), c.getType(), cntRows, rs.getString(2 + i*cc),
-                rs.getString(3 + i*cc), avg, rs.getString(5 + i*cc), rs.getString(6 + i*cc),
-                stddev, p05, p25, p50, p75, p95));
-            i++;
-          }
+      System.out.print("\n");
+      // The summary query returns only one row
+      if (query.next()) {
+        int i = 0, cc = 11;
+        String cntRows = query.column(0, String.class);
+        // Pad output
+        String fmt = String.format("%%-%ds\t%%-11s\t%%-11s\t%%-11s\t%%-11s\t%%-11s\t%%-11s\t%%-11s\t%%-11s" +
+            "\t%%-11s\t%%-11s\t%%-11s\t%%-11s\t%%-11s\n", maxColName + 1);
+        System.out.print(String.format(fmt, "Column", "Type", "Rows", "NonNull", "Unique", "Avg",
+            "Min", "Max", "StdDev", "p05", "p25", "p50", "p75", "p95"));
+        for(Column c : row.getColumns()) {
+          String avg = String.format("%.2f", query.column(3 + i*cc, Double.class));
+          String stddev = String.format("%.2f", query.column(6 + i*cc, Double.class));
+          String p05 = String.format("%.2f", query.column(7 + i*cc, Double.class));
+          String p25 = String.format("%.2f", query.column(8 + i*cc, Double.class));
+          String p50 = String.format("%.2f", query.column(9 + i*cc, Double.class));
+          String p75 = String.format("%.2f", query.column(10 + i*cc, Double.class));
+          String p95 = String.format("%.2f", query.column(11 + i*cc, Double.class));
+          System.out.print(String.format(fmt, c.getName(), c.getType(), cntRows, query.column(1 + i*cc, String.class),
+              query.column(2 + i*cc, String.class), avg, query.column(4 + i*cc, String.class), query.column(5 + i*cc, String.class),
+              stddev, p05, p25, p50, p75, p95));
+          i++;
         }
       }
     }
-    catch (SQLException e) {
+    catch (QueryException e) {
       exec.signal(e);
-      exec.closeQuery(query, conn);
+      query.close();
       return 1;
     }
-    exec.closeQuery(query, conn);
+    query.close();
     return 0; 
   }
   
@@ -1422,105 +1414,102 @@ public class Stmt {
     sql.append(")) t) t WHERE rn <= " + topNum + " ORDER BY id, cnt DESC");
     // Add LIMIT as Order by-s without limit can disabled for safety reasons
     sql.append(" LIMIT " + topNum * row.size());
-    Query query = exec.executeQuery(ctx, sql.toString(), conn);
+    QueryResult query = queryExecutor.executeQuery(sql.toString(), ctx);
     if (query.error()) { 
       exec.signal(query);
       return 1;
     }    
     exec.setSqlSuccess();
     try {
-      ResultSet rs = query.getResultSet();
-      if (rs != null) {
-        int prevId = -1;
-        int grRow = 0;
-        int colNum = 0;
-        int maxLen = row.getColumn(colNum).getName().length();
-        ArrayList<String> outCols = new ArrayList<String>();
-        ArrayList<Integer> outCnts = new ArrayList<Integer>();
-        ArrayList<Integer> outLens = new ArrayList<Integer>(); 
-        while (rs.next()) {         
-          int id = rs.getInt(1);
-          String value = rs.getString(2);
-          int cnt = rs.getInt(3);
-          if (prevId == -1) {
-            prevId = id;
-          }
-          // Still the same column
-          if (id == prevId) {
-            outCols.add(value);
-            outCnts.add(cnt);
-            if (value != null && value.length() > maxLen) {
-              maxLen = value.length() < 300 ? value.length() : 300;
-            }
-            grRow++;
-          }
-          // First value for next column
-          else {
-            // Pad with empty rows if the number of values in group is less than TOP num
-            for (int j = grRow; j < topNum; j++) {
-              outCols.add("");
-              outCnts.add(0);
-              grRow++;
-            }
-            outCols.add(value);
-            outCnts.add(cnt);
-            outLens.add(maxLen);
-            colNum++;
-            maxLen = row.getColumn(colNum).getName().length();
-            if (value != null && value.length() > maxLen) {
-              maxLen = value.length() < 300 ? value.length() : 300;
-            }
-            grRow = 1;            
-            prevId = id;
-          }
+      int prevId = -1;
+      int grRow = 0;
+      int colNum = 0;
+      int maxLen = row.getColumn(colNum).getName().length();
+      ArrayList<String> outCols = new ArrayList<>();
+      ArrayList<Integer> outCnts = new ArrayList<>();
+      ArrayList<Integer> outLens = new ArrayList<>();
+      while (query.next()) {
+        int id = query.column(0, Integer.class);
+        String value = query.column(1, String.class);
+        int cnt = query.column(2, Integer.class);
+        if (prevId == -1) {
+          prevId = id;
         }
-        for (int j = grRow; j < topNum; j++) {
-          outCols.add("");
-          outCnts.add(0);
+        // Still the same column
+        if (id == prevId) {
+          outCols.add(value);
+          outCnts.add(cnt);
+          if (value != null && value.length() > maxLen) {
+            maxLen = Math.min(value.length(), 300);
+          }
           grRow++;
         }
-        if (maxLen != 0) {
+        // First value for next column
+        else {
+          // Pad with empty rows if the number of values in group is less than TOP num
+          for (int j = grRow; j < topNum; j++) {
+            outCols.add("");
+            outCnts.add(0);
+            grRow++;
+          }
+          outCols.add(value);
+          outCnts.add(cnt);
           outLens.add(maxLen);
-        }        
-        System.out.print("\n");
-        // Output header
-        i = 0;
-        for(Column c : row.getColumns()) {
-          if (i != 0) {
-            System.out.print("\t");
+          colNum++;
+          maxLen = row.getColumn(colNum).getName().length();
+          if (value != null && value.length() > maxLen) {
+            maxLen = Math.min(value.length(), 300);
           }
-          String fmt = String.format("%%-%ds", outLens.get(i) + 11 + 3);
-          System.out.print(String.format(fmt, c.getName()));
-          i++;
-        }
-        System.out.print("\n");
-        // Output top values
-        for (int j = 0; j < topNum; j++) {
-          for(int k = 0; k < row.size(); k++) {
-            if (k != 0) {
-              System.out.print("\t");
-            }
-            int cnt = outCnts.get(j + k * topNum);
-            if (cnt != 0) { // skip padded values
-              String fmt = String.format("%%-%ds", outLens.get(k));
-              System.out.print(String.format(fmt, outCols.get(j + k * topNum)));
-              System.out.print(String.format("   %-11d", cnt));
-            }
-            else {
-              String fmt = String.format("%%-%ds", outLens.get(k) + 11 + 3);
-              System.out.print(String.format(fmt, ""));
-            }
-          }
-          System.out.print("\n");
+          grRow = 1;
+          prevId = id;
         }
       }
+      for (int j = grRow; j < topNum; j++) {
+        outCols.add("");
+        outCnts.add(0);
+        grRow++;
+      }
+      if (maxLen != 0) {
+        outLens.add(maxLen);
+      }
+      System.out.print("\n");
+      // Output header
+      i = 0;
+      for(Column c : row.getColumns()) {
+        if (i != 0) {
+          System.out.print("\t");
+        }
+        String fmt = String.format("%%-%ds", outLens.get(i) + 11 + 3);
+        System.out.print(String.format(fmt, c.getName()));
+        i++;
+      }
+      System.out.print("\n");
+      // Output top values
+      for (int j = 0; j < topNum; j++) {
+        for(int k = 0; k < row.size(); k++) {
+          if (k != 0) {
+            System.out.print("\t");
+          }
+          int cnt = outCnts.get(j + k * topNum);
+          if (cnt != 0) { // skip padded values
+            String fmt = String.format("%%-%ds", outLens.get(k));
+            System.out.print(String.format(fmt, outCols.get(j + k * topNum)));
+            System.out.print(String.format("   %-11d", cnt));
+          }
+          else {
+            String fmt = String.format("%%-%ds", outLens.get(k) + 11 + 3);
+            System.out.print(String.format(fmt, ""));
+          }
+        }
+        System.out.print("\n");
+      }
     }
-    catch (SQLException e) {
+    catch (QueryException e) {
       exec.signal(e);
-      exec.closeQuery(query, conn);
+      query.close();
       return 1;
     }
-    exec.closeQuery(query, conn);
+    query.close();
     return 0; 
   }
  
@@ -1634,8 +1623,8 @@ public class Stmt {
   void trace(ParserRuleContext ctx, String message) {
 	  exec.trace(ctx, message);
   }
-  
-  void trace(ParserRuleContext ctx, Var var, ResultSet rs, ResultSetMetaData rm, int idx) throws SQLException {
-    exec.trace(ctx, var, rs, rm, idx);
+
+  void trace(ParserRuleContext ctx, Var var, Metadata metadata, int idx) {
+    exec.trace(ctx, var, metadata, idx);
   }
 }
