@@ -18,45 +18,50 @@
 
 package org.apache.hive.hplsql.functions;
 
-import java.sql.ResultSet;
-import java.sql.SQLException;
 import java.util.ArrayList;
 import java.util.HashMap;
 import java.util.Map;
 
-import org.apache.hive.hplsql.*;
+import org.apache.hive.hplsql.Conn;
+import org.apache.hive.hplsql.Exec;
+import org.apache.hive.hplsql.HplsqlParser;
+import org.apache.hive.hplsql.Var;
+import org.apache.hive.hplsql.executor.QueryException;
+import org.apache.hive.hplsql.executor.QueryExecutor;
+import org.apache.hive.hplsql.executor.QueryResult;
 
-public class FunctionMisc extends Function {
-  public FunctionMisc(Exec e) {
-    super(e);
+public class FunctionMisc extends BuiltinFunctions {
+  public FunctionMisc(Exec e, QueryExecutor queryExecutor) {
+    super(e, queryExecutor);
   }
 
   /** 
    * Register functions
    */
   @Override
-  public void register(Function f) {
-    f.map.put("COALESCE", new FuncCommand() { public void run(HplsqlParser.Expr_func_paramsContext ctx) { nvl(ctx); }});
-    f.map.put("DECODE", new FuncCommand() { public void run(HplsqlParser.Expr_func_paramsContext ctx) { decode(ctx); }});
-    f.map.put("NVL", new FuncCommand() { public void run(HplsqlParser.Expr_func_paramsContext ctx) { nvl(ctx); }});
-    f.map.put("NVL2", new FuncCommand() { public void run(HplsqlParser.Expr_func_paramsContext ctx) { nvl2(ctx); }});
-    f.map.put("PART_COUNT_BY", new FuncCommand() { public void run(HplsqlParser.Expr_func_paramsContext ctx) { partCountBy(ctx); }});
-    
-    f.specMap.put("ACTIVITY_COUNT", new FuncSpecCommand() { public void run(HplsqlParser.Expr_spec_funcContext ctx) { activityCount(ctx); }});
-    f.specMap.put("CAST", new FuncSpecCommand() { public void run(HplsqlParser.Expr_spec_funcContext ctx) { cast(ctx); }});
-    f.specMap.put("CURRENT", new FuncSpecCommand() { public void run(HplsqlParser.Expr_spec_funcContext ctx) { current(ctx); }});
-    f.specMap.put("CURRENT_USER", new FuncSpecCommand() { public void run(HplsqlParser.Expr_spec_funcContext ctx) { currentUser(ctx); }});
-    f.specMap.put("PART_COUNT", new FuncSpecCommand() { public void run(HplsqlParser.Expr_spec_funcContext ctx) { partCount(ctx); }});
-    f.specMap.put("USER", new FuncSpecCommand() { public void run(HplsqlParser.Expr_spec_funcContext ctx) { currentUser(ctx); }});
+  public void register(BuiltinFunctions f) {
+    f.map.put("COALESCE", this::nvl);
+    f.map.put("DECODE", this::decode);
+    f.map.put("NVL", this::nvl);
+    f.map.put("NVL2", this::nvl2);
+    f.map.put("PART_COUNT_BY", this::partCountBy);
+    f.map.put("MOD", this::modulo);
 
-    f.specSqlMap.put("CURRENT", new FuncSpecCommand() { public void run(HplsqlParser.Expr_spec_funcContext ctx) { currentSql(ctx); }});
+    f.specMap.put("ACTIVITY_COUNT", this::activityCount);
+    f.specMap.put("CAST", this::cast);
+    f.specMap.put("CURRENT", this::current);
+    f.specMap.put("CURRENT_USER", this::currentUser);
+    f.specMap.put("PART_COUNT", this::partCount);
+    f.specMap.put("USER", this::currentUser);
+
+    f.specSqlMap.put("CURRENT", this::currentSql);
   }
   
   /**
    * ACTIVITY_COUNT function (built-in variable)
    */
   void activityCount(HplsqlParser.Expr_spec_funcContext ctx) {
-    evalInt(new Long(exec.getRowCount()));
+    evalInt(Long.valueOf(exec.getRowCount()));
   }
   
   /**
@@ -226,25 +231,34 @@ public class FunctionMisc extends Function {
       evalNull();
       return;
     }
-    Query query = exec.executeQuery(ctx, sql.toString(), exec.conf.defaultConnection);
+    QueryResult query = queryExecutor.executeQuery(sql.toString(), ctx);
     if (query.error()) {
-      evalNullClose(query, exec.conf.defaultConnection);
+      evalNullClose(query);
       return;
     }
     int result = 0;
-    ResultSet rs = query.getResultSet();
     try {
-      while (rs.next()) {
+      while (query.next()) {
         result++;
       }
-    } catch (SQLException e) {
-      evalNullClose(query, exec.conf.defaultConnection);
+    } catch (Exception e) {
+      evalNullClose(query);
       return;
     }
     evalInt(result);
-    exec.closeQuery(query, exec.conf.defaultConnection);
+    query.close();
   }
-  
+
+  public void modulo(HplsqlParser.Expr_func_paramsContext ctx) {
+    if (ctx.func_param().size() == 2) {
+      int a = evalPop(ctx.func_param(0).expr()).intValue();
+      int b = evalPop(ctx.func_param(1).expr()).intValue();
+      evalInt(a % b);
+    } else {
+      evalNull();
+    }
+  }
+
   /**
    * PART_COUNT_BY function
    */
@@ -256,22 +270,21 @@ public class FunctionMisc extends Function {
     String tabname = evalPop(ctx.func_param(0).expr()).toString();
     ArrayList<String> keys = null;
     if (cnt > 1) {
-      keys = new ArrayList<String>();
+      keys = new ArrayList<>();
       for (int i = 1; i < cnt; i++) {
         keys.add(evalPop(ctx.func_param(i).expr()).toString().toUpperCase());
       }
     }    
     String sql = "SHOW PARTITIONS " + tabname;
-    Query query = exec.executeQuery(ctx, sql, exec.conf.defaultConnection);
+    QueryResult query = queryExecutor.executeQuery(sql, ctx);
     if (query.error()) {
-      exec.closeQuery(query, exec.conf.defaultConnection);
+      query.close();
       return;
     }
-    ResultSet rs = query.getResultSet();
-    HashMap<String, Integer> group = new HashMap<String, Integer>();
+    Map<String, Integer> group = new HashMap<>();
     try {
-      while (rs.next()) {
-        String part = rs.getString(1);
+      while (query.next()) {
+        String part = query.column(0, String.class);
         String[] parts = part.split("/");
         String key = parts[0];
         if (cnt > 1) {
@@ -288,12 +301,12 @@ public class FunctionMisc extends Function {
         }
         Integer count = group.get(key);
         if (count == null) {
-          count = new Integer(0); 
+          count = Integer.valueOf(0);
         }
         group.put(key, count + 1);        
       }
-    } catch (SQLException e) {
-      exec.closeQuery(query, exec.conf.defaultConnection);
+    } catch (QueryException e) {
+      query.close();
       return;
     }
     if (cnt == 1) {
@@ -301,9 +314,9 @@ public class FunctionMisc extends Function {
     }
     else {
       for (Map.Entry<String, Integer> i : group.entrySet()) {
-        System.out.println(i.getKey() + '\t' + i.getValue());
+        console.printLine(i.getKey() + '\t' + i.getValue());
       }
     }
-    exec.closeQuery(query, exec.conf.defaultConnection);
+    query.close();
   }
 }
